# evolvenetworks

./: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  COPYRIGHT.TXT  NETWORKEVOLUTION.sln  README.TXT  ZERO_CHECK.vcproj  bistabilize.vcproj  cells_ssa.vcproj  cmake_install.cmake  evolveChemotaxis.vcproj  evolveNoiseDamper.vcproj  evolveOscillator.vcproj  evolveXOR.vcproj  findLoops.vcproj  ga.vcproj  gaBistabilize.vcproj  loops.vcproj  main.hpp  netga.vcproj  ode.vcproj  optim.vcproj  ssa.vcproj
GA/: CMakeLists.txt  GAfileio.h  antimonyToFunctions.c  antimonyToFunctions.h  blocks.c  blocks.h  enzymeNetwork.c  enzymeNetwork.h  functions.c  functions.h  ga.c  ga.h  ga.i  ga.py  ga_wrap.c  geneRegulationNetwork.c  geneRegulationNetwork.h  massActionNetwork.c  massActionNetwork.h  proteinInteractionNetwork.c  proteinInteractionNetwork.h  reactionNetwork.c  reactionNetwork.h  testBlocks.c
GA/blocks/: bibi.ant  biuni.ant  convertAll.py  degradation.ant  enzyme_catalysis.ant  gene_activation_1.ant  gene_repression_1.ant  gene_repression_2.ant  influx.ant  modules.ant  unibi.ant  uniuni.ant
GAmodular/: CMakeLists.txt  GAmodular.cpp  GAmodular.h
GUI/: CMakeLists.txt  CThread.cpp  CThread.h  CodeEditor.cpp  CodeEditor.h  GenerateGAInputs.cpp  GenerateGAInputs.h  ModuleSelector.cpp  ModuleSelector.h  NetworkEvolveGUI.cpp  NetworkEvolveGUI.h  RunEvolution.cpp  RunEvolution.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  networkevolve.icns  networkevolve.qrc  networkevolve.qss  networkevolve.rc
GUI/FitnessFunctions/: DualFitness.c  Oscillator.c  ReduceNoise.c  XORgate.c
GUI/source/: GAfileio.c  cvodesim.h  enzymeNetwork.h  ga.c  ga.h  geneRegulationNetwork.c  geneRegulationNetwork.h  massActionNetwork.c  opt.h  proteinInteractionNetwork.c  proteinInteractionNetwork.h  reactionNetwork.c  reactionNetwork.h
bistability/: ga_bistable.c  test_bistable.c
chemotaxis/: evolve_chemotaxis.c  evolve_chemotaxis.h
documentation/: CMakeLists.txt  Doxyfile.txt  Doxyfile.txt.in  Makefile  cmake_install.cmake
examples/: CMakeLists.txt  ga_logicGate.c  ga_oscillator.c  ga_reduceNoise.c  optim_sbml.cpp  optim_sbml.cxx  test_cvode.c  test_modularga.cpp  test_sbml.cpp
galib/: CMakeLists.txt
loops/: CMakeLists.txt  loops.c  loops.h  test_loops.c
network_design/: CMakeLists.txt  DesignFFNMain.cpp  DesignFFNWidget.cpp  DesignFFNWidget.h  DesignFeedforwarGRN.c  DesignFeedforwardGRN.c  DesignFeedforwardGRN.h  test.c
optimization_GUI/: CMakeLists.txt  DataTable.h  main.cpp  plotWidget.cpp  plotWidget.h  randomize_widget.cpp  randomize_widget.h  ref.csv  sbw_ga_optim.cpp  sbw_ga_optim.h  sbwclient.cpp  sbwclient.h
optimization_GUI/java/: JSimSBWOptim.java  JSimSBWOptimClient.java  JSimSBWOptimInterface.java  JSimSBWOptimServer.java
parameters/: CMakeLists.txt  ParameterInformationContent.c  ParameterInformationContent.h  ParameterMC.cpp  ParameterMC.h  ga_bistable.c  test_bistable.c
simulation/: CMakeLists.txt  cells_ssa.c  cells_ssa.h  correlation.c  correlation.h  cvodesim.c  cvodesim.h  eigen.h  langevin.c  langevin.h  mtrand.c  mtrand.h  sbml_sim.cpp  sbml_sim.h  sim.i  sim.py  sim_wrap.c  ssa.c  ssa.h
website/: index.html
website/doxygen/: annotated.html  cells__ssa_8h_source.html  classes.html  cvode_8h_source.html  cvode__band_8h_source.html  cvode__band__impl_8h_source.html  cvode__bandpre_8h_source.html  cvode__bandpre__impl_8h_source.html  cvode__bbdpre_8h_source.html  cvode__bbdpre__impl_8h_source.html  cvode__dense_8h_source.html  cvode__dense__impl_8h_source.html  cvode__diag_8h_source.html  cvode__diag__impl_8h_source.html  cvode__impl_8h_source.html  cvode__spbcgs_8h_source.html  cvode__spgmr_8h_source.html  cvode__spils_8h_source.html  cvode__spils__impl_8h_source.html  cvode__sptfqmr_8h_source.html  cvodesim_8h_source.html  evolve__chemotaxis_8h_source.html  fcvbbd_8h_source.html  fcvbp_8h_source.html  fcvode_8h_source.html  fcvroot_8h_source.html  files.html  fnvector__parallel_8h_source.html  fnvector__serial_8h_source.html  ga_8h_source.html  ga__bistable_8h_source.html  gene_regulation_network_8h_source.html  group__bistable.html  group__cvodewrapper.html  group__ga.html  group__generic_network.html  group__geneticnetwork.html  group__gillespie.html  group__loops.html  group__massaction.html  (+22 more)
website/images/: Thumbs.db
